# XPlaneAutolandScenario

./: .gitignore  Chadbourne Error Script Inputs  LICENSE  README.md  error_generator.py  error_plot.py  error_script_inputs.txt  image_check.py  image_phi-1_theta-1_psi-1_x509_y-31_h466.pt  image_phi-3_theta-1_psi9_x130_y25_h499.pt  image_phi0_theta0_psi0_x1_y-8_h411.pt  keep_h_collect.py  place_and_collect.py  pyproject.toml  run_autoland.py  run_autoland_CBF.py  safe_set.py  scod.py  scod_train.py  test_vision_model.py  train_slurm.sh  wpi_scod.py
MATLAB/: AutolandBehavior.mlx  Condense.mlx  ErrorComparisons.mlx  ErrorPlots.mlx  LossDisplay.mlx  OOD_Error.mlx  SafeSetErrorComp.mlx  SafeSetSanityCheck.mlx  SliceDisplay.mlx  autoland.mlx  scod_graphs.mlx
Subsets/: scod_200  scod_200_2  scod_200_?  scod_250  scod_300  scod_350  scod_400  scod_450  scod_50  scod_unsafe
autoland_errors/: README.md
autoland_errors/2024-3-25/: Trial10-12000_states.csv  Trial11-12000_states.csv  Trial12-12464_states.csv  Trial13-12464_states.csv  Trial14-12464_states.csv  Trial1_states.csv  Trial2_states.csv  Trial3_states.csv  Trial4-10000_states.csv  Trial5-10000_states.csv  Trial6-11000_states.csv  Trial7-11000_states.csv  Trial8-11500_states.csv  Trial9-11500_states.csv
dataWPI_12464/: config.txt
errors/: README.md
metadata/: X-Camera_Cessna_172SP.csv
modelfree_testing/: dubins.py  run_modelfree.py  unified_cbf copy.py
models/: README.md
plots/: README.md
schoer_testing/: dubins.py  run_autoland_ads.py  testing.py
scod/: scod.py
scripts/: calc_transform.py
(+75072 files in other folders)
